# SE4HPC_project_part2_TerranaZechini

./: .gitignore  CMakeLists.txt  README.md  Singularity.def  SingularityCompile.def  SingularityCompile1.def  SingularityNoCmake.def  error.txt  job.sh  job1.sh  output.txt
.github / workflows/: matrix_mult.yml
.github/workflows/: matrix_mult.yml  matrix_mult_singularity.yml
test/: test_matrix_multiplication.cpp
